codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approvals_selection_popup.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 18
expression: popup
---
  Update Model Permissions

› 1. Default      Codex Router can read and edit files in the current
                  workspace, and run commands. Approval is required to access
                  the internet or edit other files.
  2. Full Access  Codex Router can edit files outside this workspace and
                  access the internet without asking for approval. Exercise
                  caution when using.

  Press enter to confirm or esc to go back
