codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__chat_empty_session_homepage_logo.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 1083
expression: rendered
---
"                                                                                "
"╭──────────────────────────────────────────────────────────────────────╮        "
"│  ####  ###  ####  ##### #   #    ####   ###  #   # ##### ##### ####  │        "
"│ #     #   # #   # #      # #     #   # #   # #   #   #   #     #   # │        "
"│ #     #   # #   # #       #      #   # #   # #   #   #   #     #   # │        "
"│ #     #   # #   # ####    #      ####  #   # #   #   #   ####  ####  │        "
"│ #     #   # #   # #       #      # #   #   # #   #   #   #     # #   │        "
"│ #     #   # #   # #      # #     #  #  #   # #   #   #   #     #  #  │        "
"│  ####  ###  ####  ##### #   #    #   #  ###   ###    #   ##### #   # │        "
"│ >_ Codex Router (v1.0.9)                                             │        "
"│ model:     loading   /model to change                                │        "
"│ directory: /tmp/project                                              │        "
"╰──────────────────────────────────────────────────────────────────────╯        "
"                                                                                "
"                                                                                "
"› Ask Codex Router to do anything                                               "
"                                                                                "
"  gpt-5.5 default · /tmp/project                                                "
